[package]
name = "po-hproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait="0.1"
openssl-sys = "0.9.102"
pingora-core = "0.2.0"
pingora-proxy = "0.2.0"
pingora-error = {version = "*"}
pingora-timeout = "0.2.0"
log = {version = "*"}
structopt = {version = "*"}

pingora-http = {version = "*"}

env_logger = {version = "*"}

prometheus = {version = "*"}
serde_json = "1.0.117"
http = {version = "1.1.0"}
bytes = "1.6.0"
moka = { version = "0.12.7", features = ["sync"] }
serde = { version = "1.0.203", features = ["derive"] }